src/objects/CBAmount__c.object
<CustomObject>
    <fields>
        <fullName>CBBudgetLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Budget Line</label>
        <referenceTo>CBBudgetLine__c</referenceTo>
        <relationshipLabel>CB Amounts</relationshipLabel>
        <relationshipName>CBAmounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBBudgetYearSet__c</fullName>
        <formula>CBPeriod__r.CBBudgetYearSet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Budget Year Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBBudgetYear__c</fullName>
        <formula>CBPeriod__r.CBBudgetYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Budget Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBKey__c</fullName>
        <label>CB Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBPeriod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Period</label>
        <referenceTo>CBPeriod__c</referenceTo>
        <relationshipLabel>CB Amounts</relationshipLabel>
        <relationshipName>CB_Amounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBStyleName__c</fullName>
        <formula>SUBSTITUTE(CBStyle__r.Name, &quot; &quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Style Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBStyle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Style</label>
        <referenceTo>CBStyle__c</referenceTo>
        <relationshipLabel>CB Amounts</relationshipLabel>
        <relationshipName>CB_Style</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeriodName__c</fullName>
        <formula>CBPeriod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScenarioName__c</fullName>
        <formula>CBBudgetLine__r.CBScenario__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>CB Amount</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CBPeriod__c</columns>
        <columns>CBBudgetLine__c</columns>
        <columns>Value__c</columns>
        <columns>CBBudgetYear__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CBBudgetLine__c</field>
            <operation>equals</operation>
            <value>Multiyear Budget Line</value>
        </filters>
        <filters>
            <field>CBBudgetYear__c</field>
            <operation>equals</operation>
            <value>a047e000007391n</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Line Amount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Amounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>